tests/ui/g-route-controller-mismatch.stderr
error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-route-controller-mismatch.rs:10:40
   |
10 | const BAD_ARM: g::Program<BadArm> = g::send::<Wrong, Controller, g::Msg<5, ()>>();
   |                                        ^^^^   -----  ----------  ------------- supplied 3 generic arguments
   |                                        |
   |                                        expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
10 | const BAD_ARM: g::Program<BadArm> = g::send::<Wrong, Controller, g::Msg<5, ()>, LANE>();
   |                                                                               ++++++

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-route-controller-mismatch.rs:11:42
   |
11 | const GOOD_ARM: g::Program<GoodArm> = g::send::<Controller, Target, g::Msg<6, ()>>();
   |                                          ^^^^   ----------  ------  ------------- supplied 3 generic arguments
   |                                          |
   |                                          expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
11 | const GOOD_ARM: g::Program<GoodArm> = g::send::<Controller, Target, g::Msg<6, ()>, LANE>();
   |                                                                                  ++++++

error[E0277]: the trait bound `StepCons<SendStep<Role<2>, Role<0>, Message<LabelMarker<5>, ()>>, StepNil>: hibana::global::steps::RouteArm<0>` is not satisfied
  --> tests/ui/g-route-controller-mismatch.rs:16:39
   |
16 |     let builder = g::route_chain::<0, BadArm>(BAD_ARM).and(GOOD_ARM);
   |                                       ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `hibana::global::steps::RouteArm<0>` is not implemented for `StepCons<SendStep<Role<2>, Role<0>, Message<LabelMarker<5>, ()>>, StepNil>`
   = help: the trait `hibana::global::steps::RouteArm<CONTROLLER>` is implemented for `StepCons<SendStep<Role<CONTROLLER>, Role<CONTROLLER>, Msg, LANE>, Tail>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0277]: the trait bound `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<6>, ()>>, StepNil>: hibana::global::steps::RouteArm<0>` is not satisfied
  --> tests/ui/g-route-controller-mismatch.rs:16:60
   |
16 |     let builder = g::route_chain::<0, BadArm>(BAD_ARM).and(GOOD_ARM);
   |                                                        --- ^^^^^^^^ unsatisfied trait bound
   |                                                        |
   |                                                        required by a bound introduced by this call
   |
   = help: the trait `hibana::global::steps::RouteArm<0>` is not implemented for `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<6>, ()>, 0>, StepNil>`
           but it is implemented for `StepCons<SendStep<Role<0>, Role<0>, _, _>, _>`
note: required by a bound in `RouteChainBuilder::<CONTROLLER, Steps>::and`
  --> src/global/program.rs
   |
   |     pub const fn and<NextSteps>(
   |                  --- required by a bound in this associated function
...
   |         NextSteps: RouteArm<CONTROLLER>,
   |                    ^^^^^^^^^^^^^^^^^^^^ required by this bound in `RouteChainBuilder::<CONTROLLER, Steps>::and`
